# aiomarketstack

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: lint-test.yaml
aiomarketstack/: __init__.py  exceptions.py  types.py
docs/examples/: matplotlib_plot.py
tests/: __init__.py  __main__.py  test_aiomarketstack.py  util.py
